Increased percentages on margins to prevent overflow on x axis on phones

--- a/blog/assets/css/style.css
+++ b/blog/assets/css/style.css
@@ -242,12 +242,12 @@ body
   
   #left-arrow
   {
-    left:0;
+    left:2%;
   }
   
   #right-arrow
   {
-    right:0;
+    right:2%;
   }
   
   .card-inner span
